Fixed Education section alignment issue

--- a/components/Education/education.css
+++ b/components/Education/education.css
@@ -1,5 +1,4 @@
 .education {
-    max-width: 1440px;
     width: 100%;
     margin: 1em 0 auto;
 }
